--- a/css-ex3/index.html
+++ b/css-ex3/index.html
@@ -11,7 +11,8 @@
     <header>
         <h1>Joshua</h1>
     </header>
-    <div class="box1">main</div>
+    <div class="box1">main 1</div>
+    <div class="box2">main</div>
     <footer>Author: joshua</footer>
     
 </body>
