--- a/css-extra/index.html
+++ b/css-extra/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/66d2502687.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body class="container">
     <header>
+        <i class="fas fa-laptop-code"></i>
         <nav>
             <a href="">home</a>
             <a href="">About</a>
@@ -43,6 +45,7 @@
 
         </div>
         <div class="sidemenu">
+            <h3>cool pics</h3>
             <div class="side-box1">
                 <img src="https://www.imagesjunction.com/images/img/aesthetic_profile_pics.jpg" alt="pics">
             </div>
